retrieves channel information of the Sentinel-2 image & predict land cover classes for each 64x64px window

--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
       "mount_file_id": "1ybbQTHScMz7y2Gur32DgQOvoFSKQRtWc",
-      "authorship_tag": "ABX9TyN+PUd0mGGkl/wZ24IAQQ4U",
+      "authorship_tag": "ABX9TyOAqeFy5jhqxhcUKA6mv2pB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1045,7 +1045,7 @@
           "height": 232
         },
         "id": "CfmouY01pgHE",
-        "outputId": "28246e30-3b09-433a-fa5b-d124f14b91f2"
+        "outputId": "0c26b239-3b69-480b-e0f3-1c4ba9081c37"
       },
       "source": [
         "print('[AI4EO_MOOC]_log: Divide all images into windows for the inference step')\n",
@@ -1053,7 +1053,7 @@
         "target_shape = (s2_arr.shape[0], s2_arr.shape[1])\n",
         "windows = sliding(target_shape, 64, fixed=True)"
       ],
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-1a0c4eab61d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Divide all images into windows for the inference step'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtarget_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mwindows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfixed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-26-1a0c4eab61d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Divide all images into windows for the inference step'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtarget_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms2_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mwindows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfixed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
           ]
         }
@@ -1089,18 +1089,99 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PnSgPEbQqXma"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "id": "PnSgPEbQqXma",
+        "outputId": "ba465e75-dc22-4a13-b235-fbba6758a421"
       },
       "source": [
-        "windows = iter(windows)\n",
+        "windows_ = iter(windows)\n",
         "windows_class = iter(windows)\n",
         "\n",
         "batch_size = 10\n",
         "total_chips = len(windows)\n",
         "num_steps = int(total_chips / batch_size)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-d7475d73e024>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwindows_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwindows_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtotal_chips\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwindows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'windows' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EHd_fnUwxv4p"
+      },
+      "source": [
+        "In the next step, we go through each `64 x 64 pixel` window(chip), retrieve the channel information of the Sentinel-2 image and predict the land cover classes for each chip with the function `model.predict()`. The prediction results return the probability of each land use class for each pixel. With numpy function `argmax()`, we can select the class with the highest predicted probability.\n",
+        "\n",
+        "The last step involves graduall;y building up the final image `img_classes` with the predicted land use  classes and a dimension of `(10980 x 10980)`, based on the `64 x 64 pixel` windows."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 249
+        },
+        "id": "qaebNf1UxwoF",
+        "outputId": "15847d56-a74b-4dae-faca-8e31511f6e51"
+      },
+      "source": [
+        "print('[AI4EO_MOOC]_log: Inference step...')\n",
+        "\n",
+        "img_classes = np.zeros((total_stack.shape[0], total_stack.shape[1]), dtype=np.uint8)\n",
+        "\n",
+        "predictions = []\n",
+        "progbar = tf.keras.utils.Progbar(num_steps)\n",
+        "\n",
+        "for b in range(num_steps):\n",
+        "    chips = np.empty([batch_size, 64, 64, 13])\n",
+        "    for k in range(batch_size):\n",
+        "        ymin, xmin, xmax, ymax = next(windows_)\n",
+        "        chips[k] = s2_arr[xmin:xmin+xmax, ymin:ymin+ymax, :]\n",
+        "\n",
+        "    preds = model.predict(chips)\n",
+        "    predictions.append(np.argmax(preds, axis=-1))\n",
+        "    for i in range(0, batch_size):\n",
+        "        ymin_cl. xmin_cl, xmax_cl, ymax_cl = next(windows_class)\n",
+        "        img_classes[xmin_cl:xmin_cl+xmax_cl, ymin_cl:ymin_cl+ymax_cl] = predictions[b][i]\n",
+        "    progbar.update(b + 1)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Inference step...\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-23-e8b513988b5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprogbar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProgbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'num_steps' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
