edit text content

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyM8M5nFSVRoqj+FowUucsCS",
+      "authorship_tag": "ABX9TyMZXolSTMh49UGW+6JNCdWz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,8 +38,19 @@
         "\n",
         "This workflow explores the process of training a `Convolutional Neural Network (CNN)` with Keras based on the benchmark dataset EuroSAT. This note book contains notes I've taken as I work through the example workflow presented in the AI for Earth monitoring MOOC on Futurelearn.\n",
         "\n",
-        "There are two parts to this learning module, the first part as described above explores the process of training a convolutional neural ntwork based on EuroSAT benchmark data for land use/land cover classification while the second part explores the workflow for utilising the learned capabilities of our pre-trained model to infer land use / land cover classification on a Sentinel-2 level-1C tile image.   \n"
+        "There are two parts to this learning module, the first part as described above explores the process of training a convolutional neural network based on EuroSAT benchmark data for land use/land cover classification while the second part explores the workflow for utilising the learned capabilities of our pre-trained model to infer land use / land cover classification on a Sentinel-2 level-1C tile image.   \n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L9VXwPV6rPRM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -132,7 +142,7 @@
         "## end s3fs import snippet ##\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +153,7 @@
       "source": [
         "# !unzip \"drive/MyDrive/Land Classification/S2_Tile_based_classification.zip\" -d \"drive/MyDrive/Land Classification/\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +283,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +324,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +374,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +437,7 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +492,7 @@
         "\n",
         "    return windows"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +521,7 @@
         "# MAIN_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/'\n",
         "DATA_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_training/'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +570,7 @@
         "      tmp_gt[i]=1\n",
         "      lst_gt_training.append(tmp_gt)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +603,7 @@
       "source": [
         "type(lst_gt_training[0])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +639,7 @@
         "print(len(lst_arr_training), len(lst_gt_training))\n",
         "print(lst_arr_training[1000-1].shape, lst_gt_training[1000-1].shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +677,7 @@
         "\n",
         "arr_training.shape, arr_gt.shape"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +719,7 @@
         "arr_training_res = np.reshape(arr_training,(num_of_img,rows,columns,bands))\n",
         "arr_training_res.shape"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +752,7 @@
       "source": [
         "type(arr_training_res)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +793,7 @@
         "  amax_tmp=np.amax(arr_training_res[i,:,:,:])\n",
         "  arr_training_res[i,:,:,:] = arr_training_res[i,:,:,:] / amax_tmp"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +825,7 @@
       "source": [
         "arr_training_res[1000-1,:,:,:]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -949,7 +959,7 @@
         "        test_size=test_size,\n",
         "        random_state=42)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +995,7 @@
         "print('[AI4EO_MOOC]_log: Convolutional Neural Network architecture:')\n",
         "model = keras.Sequential()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1059,7 @@
         "model.add(Dense(num_classes))\n",
         "model.add(Activation('softmax'))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1091,7 @@
         "              optimizer=opt,\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1124,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,7 +1211,7 @@
         "filepath_tmp = save_dir+model_name\n",
         "filepath_tmp"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1253,7 @@
         "    mode='max')\n",
         "callbacks_list = [checkpoint]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1283,7 +1293,7 @@
         "                    callbacks=callbacks_list,\n",
         "                    verbose = 1)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1373,7 @@
         "y_pred = model.predict(X_test)\n",
         "y_pred.shape"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1407,7 +1417,7 @@
         "\n",
         "y_test_amax, y_pred_amax"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1447,7 +1457,7 @@
         "matrix = metrics.confusion_matrix(y_test_amax, y_pred_amax)\n",
         "matrix"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1507,7 +1517,7 @@
         "                                columns = label_str)\n",
         "con_mat_df"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1713,7 +1723,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 743
+          "height": 737
         },
         "id": "vYyR4BJ3Mkdj",
         "outputId": "ab2b864d-dcfb-4eac-9e57-95423a0ae3f2"
@@ -1731,7 +1741,7 @@
         "plt.xlabel('Predicted label')\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1767,7 +1777,7 @@
         "\n",
         "matrix_norm = np.around(matrix_norm,decimals=2)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1795,7 +1805,7 @@
         "                               columns = label_str)\n",
         "con_mat_df_norm"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2001,7 +2011,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 743
+          "height": 740
         },
         "id": "Tez--5jcQ3NG",
         "outputId": "6f18b03a-c9f0-47c0-b917-69d4e185316c"
@@ -2016,7 +2026,7 @@
         "plt.xlabel('Predicted label')\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
